src/test/deca/syntax/invalid/sansobjet/lex_invalide_character.deca
//lex_invalide_character.deca:4:0: token recognition error a
//DEscription; token non reconnu
//Resultat: token non reconnu
#"1"
